--- a/app/src/main/res/layout-land/activity_calculator.xml
+++ b/app/src/main/res/layout-land/activity_calculator.xml
@@ -28,15 +28,14 @@
         android:id="@+id/edit_text_input"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_height_edit_text"
-        android:layout_marginTop="@dimen/margin_min"
-        android:paddingStart="@dimen/margin_min"
-        android:background="@android:color/darker_gray"
+        android:layout_marginTop="4dp"
         android:inputType="text"
+        android:background="@color/purple_200"
+        android:paddingStart="@dimen/margin_min"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="48dp" />
+        app:layout_constraintTop_toBottomOf="@id/textView1" />
 
     <TextView
         android:id="@+id/textView2"
