--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -24,20 +24,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edit_text_input"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_height_edit_text"
+        android:paddingStart="@dimen/margin_min"
+        android:inputType="text"
+        android:background="@color/purple_200"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginTop="@dimen/margin_min"
         android:layout_marginEnd="@dimen/margin_main"
-        android:background="@android:color/darker_gray"
-        android:inputType="text"
-        android:paddingStart="@dimen/margin_min"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView1"/>
+
 
     <TextView
         android:id="@+id/textView2"
@@ -56,13 +57,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_text_result"
-        android:layout_marginTop="@dimen/dimen_margin_start_text_result"
+        android:layout_marginTop="8dp"
         android:textSize="@dimen/dimen_text_result_field"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_input"
+
         tools:text="Результат" />
 
     <com.google.android.material.button.MaterialButton
