--- a/app/src/main/res/layout-land/activity_calculator.xml
+++ b/app/src/main/res/layout-land/activity_calculator.xml
@@ -30,8 +30,8 @@
         android:layout_height="@dimen/dimen_height_edit_text"
         android:layout_marginTop="4dp"
         android:inputType="text"
-        android:background="@color/purple_200"
         android:paddingStart="@dimen/margin_min"
+        android:background="?attr/colorBackgroundEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_text_result"
         android:text="@string/text_8"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintEnd_toStartOf="@+id/button_9"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/button_7"
@@ -87,12 +89,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_start_landscape"
         android:text="@string/text_7"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline2" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_div"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
@@ -116,6 +120,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_start_landscape"
         android:text="@string/text_4"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_7" />
 
@@ -125,6 +131,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_text_result"
         android:text="@string/text_5"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toEndOf="@+id/button_4"
         app:layout_constraintTop_toBottomOf="@id/button_8"
         tools:layout_editor_absoluteY="262dp" />
@@ -135,6 +143,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
         android:text="@string/text_6"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toTopOf="@id/button_3"
         app:layout_constraintStart_toEndOf="@id/button_5"
         app:layout_constraintTop_toBottomOf="@+id/button_9"
@@ -142,7 +152,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_multi"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
@@ -168,6 +178,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_start_landscape"
         android:text="@string/text_1"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_4" />
 
@@ -177,12 +189,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
         android:text="@string/text_3"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toEndOf="@id/button_2"
         app:layout_constraintTop_toBottomOf="@id/button_6" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sub"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
@@ -196,6 +210,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_text_result"
         android:text="@string/text_2"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toEndOf="@id/button_1"
         app:layout_constraintTop_toBottomOf="@id/button_5"
         tools:layout_editor_absoluteY="310dp" />
@@ -207,9 +223,10 @@
         android:layout_rowSpan="3"
         android:layout_gravity="fill"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
-        android:backgroundTint="#AE0E0E"
+
         android:text="@string/text_equals"
         app:icon="@drawable/ic_equals"
+        android:backgroundTint="?attr/colorBackgroundTintButtonEquals"
         app:layout_constraintStart_toEndOf="@+id/button_add"
         app:layout_constraintTop_toBottomOf="@id/button_x"
         tools:layout_editor_absoluteY="310dp" />
@@ -222,6 +239,8 @@
         android:layout_gravity="fill"
         android:layout_marginStart="@dimen/dimen_start_landscape"
         android:text="@string/text_0"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_1" />
 
@@ -231,12 +250,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
         android:text="@string/text_dot"
+        android:backgroundTint="?attr/colorBackgroundTintButtonDot"
         app:layout_constraintStart_toEndOf="@+id/button_0"
         app:layout_constraintTop_toBottomOf="@id/button_3" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_add"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_main"
@@ -250,6 +270,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_margin_start_12"
         android:text="@string/text_9"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toEndOf="@id/button_8"
         app:layout_constraintTop_toTopOf="@id/guideline2" />
 
@@ -267,6 +289,7 @@
         android:layout_height="@dimen/dimen_height_btn_onc_land"
         android:text="ON/C"
         app:icon="@drawable/ic_delete"
+        android:backgroundTint="?attr/colorBackgroundTintButtonONc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline8"
         app:layout_constraintHorizontal_bias="0.476"
@@ -287,5 +310,33 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="509dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_light_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        app:icon="@drawable/ic_light_mode"
+        app:iconTint="?attr/colorIconTintLight"
+        android:backgroundTint="?attr/colorBackgroundTintButtonLight"
+        app:iconGravity="textStart"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_night_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="156dp"
+        android:backgroundTint="?attr/colorBackgroundTintButtonDark"
+        app:icon="@drawable/ic_dark_mode_enable"
+        app:iconTint="?attr/colorIconTintDark"
+        app:iconGravity="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_light_mode"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
