--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -28,16 +28,16 @@
         android:id="@+id/edit_text_input"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_height_edit_text"
-        android:paddingStart="@dimen/margin_min"
-        android:inputType="text"
-        android:background="@color/purple_200"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginTop="@dimen/margin_min"
         android:layout_marginEnd="@dimen/margin_main"
+        android:background="?attr/colorBackgroundEditText"
+        android:inputType="text"
+        android:paddingStart="@dimen/margin_min"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
 
     <TextView
@@ -64,7 +64,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_input"
-
         tools:text="Результат" />
 
     <com.google.android.material.button.MaterialButton
@@ -72,18 +71,20 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
+        android:fontFamily="sans-serif-black"
         android:text="@string/text_7"
         app:layout_constraintEnd_toStartOf="@+id/button_8"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline2"
-        tools:layout_editor_absoluteY="234dp" />
+        app:layout_constraintTop_toTopOf="@id/guideline2" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_8"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_8"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_9"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_7"
@@ -95,6 +96,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_9"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_div"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_8"
@@ -103,7 +105,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_div"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_div"
@@ -131,6 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_4"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +144,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_5"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_6"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_4"
@@ -151,6 +155,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_6"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_multi"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_5"
@@ -158,7 +163,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_multi"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_multi"
@@ -184,6 +189,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_1"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,6 +200,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_3"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_sub"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_2"
@@ -201,7 +208,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sub"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_sub"
@@ -215,6 +222,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_2"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_1"
@@ -222,18 +230,16 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_equal"
-        style="@style/ButtonEqualsCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonEquals"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="@dimen/dimen_height_equals"
         android:layout_rowSpan="3"
         android:layout_gravity="fill"
-        android:layout_marginEnd="@dimen/margin_main"
-        android:backgroundTint="#AE0E0E"
+        android:layout_marginEnd="8dp"
         android:text="@string/text_equals"
         app:icon="@drawable/ic_equals"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        tools:layout_editor_absoluteX="301dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_0"
@@ -243,6 +249,7 @@
         android:layout_gravity="fill"
         android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_0"
+        android:backgroundTint="?attr/colorBackgroundTintButtonNumber"
         app:layout_constraintEnd_toStartOf="@+id/button_dot"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -253,6 +260,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_dot"
+        android:backgroundTint="?attr/colorBackgroundTintButtonDot"
         app:layout_constraintEnd_toStartOf="@+id/button_add"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_0"
@@ -260,7 +268,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_add"
-        style="@style/ButtonOperationCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonOperation"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_add"
@@ -285,7 +293,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_clear"
-        style="@style/ButtonONCCalculator"
+        android:backgroundTint="?attr/colorBackgroundTintButtonONc"
         android:layout_width="@dimen/dimen_width_btn_onc"
         android:layout_height="@dimen/dimen_heigth_btn_onc"
         android:text="ON/C"
@@ -308,5 +316,34 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="361dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_light_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        app:icon="@drawable/ic_light_mode"
+        app:iconGravity="textStart"
+        app:iconTint="?attr/colorIconTintLight"
+        android:backgroundTint="?attr/colorBackgroundTintButtonLight"
+        app:layout_constraintBottom_toTopOf="@+id/button_div"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toEndOf="@+id/button_night_mode" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_night_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="?attr/colorBackgroundTintButtonDark"
+        app:icon="@drawable/ic_dark_mode_enable"
+        app:iconTint="?attr/colorIconTintDark"
+        app:iconGravity="textStart"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toStartOf="@+id/button_light_mode"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
