--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -324,6 +324,7 @@
         android:layout_marginBottom="32dp"
         app:icon="@drawable/ic_light_mode"
         app:iconGravity="textStart"
+        android:enabled="false"
         app:iconTint="?attr/colorIconTintLight"
         android:backgroundTint="?attr/colorBackgroundTintButtonLight"
         app:layout_constraintBottom_toTopOf="@+id/button_div"
@@ -341,6 +342,7 @@
         app:icon="@drawable/ic_dark_mode_enable"
         app:iconTint="?attr/colorIconTintDark"
         app:iconGravity="textStart"
+        android:enabled="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/button_light_mode"
         app:layout_constraintHorizontal_bias="0.5"
