--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
             android:id="@+id/button_lesson_6"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:enabled="false"
+            android:enabled="true"
             android:text="@string/text_6" />
 
         <Button
