--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,12 +23,15 @@
         <item name="colorBackgroundTintButtonDark">#0529A8</item>
         <item name="colorBackgroundTintButtonLight">#0529A8</item>
     </style>
+
     <style name="ButtonOperationCalculator">
         <item name="android:backgroundTint">@color/purple_200</item>
     </style>
+
     <style name="ButtonEqualsCalculator">
         <item name="android:icon">@drawable/ic_equals</item>
-     </style>
+    </style>
+
     <style name="ButtonONCCalculator">
         <item name="android:backgroundTint">#FF46AF18</item>
     </style>
@@ -37,7 +40,7 @@
         <item name="android:textColor">@color/design_default_color_primary</item>
         <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">italic</item>
-        <item name="colorText" >@color/black</item>
+        <item name="colorText">@color/black</item>
         <item name="colorBackground">#352802</item>
         <item name="colorTextResult">#FF352802</item>
         <item name="colorBackgroundEditText">#5570B6</item>
@@ -56,7 +59,7 @@
         <item name="android:textColor">#8C9E9C</item>
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:textStyle">bold</item>
-        <item name="colorText" >#012433</item>
+        <item name="colorText">#012433</item>
         <item name="colorBackground">#B7B8A9</item>
         <item name="colorTextResult">#032E2A</item>
         <item name="colorBackgroundEditText">#98E8F3</item>
@@ -70,5 +73,14 @@
         <item name="colorBackgroundTintButtonDark">#DBDCD8</item>
         <item name="colorBackgroundTintButtonLight">#0529A8</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
