[ADDED] create layouts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_mode">#F9DA22</color>
     <color name="black_mode">#FF000000</color>
     <color name="bacground_bottom">#009688</color>
+    <color name="background_item_recycler">#CEDDDB</color>
 </resources>
