--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
             android:id="@+id/button_lesson_8"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:enabled="false"
+            android:enabled="true"
             android:text="@string/text_8" />
 
     </TableRow>
