--- a/app/src/main/res/layout/fragment_notes_city_details.xml
+++ b/app/src/main/res/layout/fragment_notes_city_details.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".lesson6.NotesDetailsFragment">
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        >
+
+        <ImageView
+            android:id="@+id/imageView_calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
+            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintStart_toEndOf="@+id/textView_date_title_city"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
         <TextView
             android:id="@+id/textView_id_title_city"
@@ -135,12 +147,12 @@
             app:layout_constraintTop_toBottomOf="@id/textView_avatar_title_city" />
 
         <DatePicker
-            android:id="@+id/datePicker"
+            android:id="@+id/datePicker_note_city_detail"
             android:layout_width="303dp"
             android:layout_height="375dp"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/notes_image_city" />
@@ -153,7 +165,7 @@
             app:layout_constraintGuide_begin="205dp" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView_image_note_city"
             android:layout_width="202dp"
             android:layout_height="226dp"
             app:layout_constraintTop_toTopOf="parent"
