--- a/app/src/main/res/layout/item_notes_city.xml
+++ b/app/src/main/res/layout/item_notes_city.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_main"
             android:layout_marginTop="@dimen/margin_main"
-            android:text="#1"
+            android:text="@string/text_id_note"
             android:textSize="18sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView_name_notes_city"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginLeft="@dimen/margin_min"
             android:layout_marginTop="@dimen/margin_main"
             android:gravity="center"
-            android:text="Москва"
+            android:text="@string/text_name_note"
             android:textAlignment="textStart"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@id/textView_id_notes_city"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_main"
-            android:text="Дата записи"
+            android:text="@string/text_date_create_note"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="parent"
