--- a/app/src/main/res/layout/fragment_notes_city_details.xml
+++ b/app/src/main/res/layout/fragment_notes_city_details.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
-            android:text="Номер Записи"
+            android:text="@string/text_title_id_note"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
-            android:text="Дата создания"
+            android:text="@string/text_date_create_note"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
             android:layout_marginTop="4dp"
-            android:text="Название города"
+            android:text="@string/text_name_note_title"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
-            android:text="Описание"
+            android:text="@string/text_description_title"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
             android:layout_marginTop="4dp"
-            android:text="Герб"
+            android:text="@string/text_armof_note_title"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
